--- a/reactdemo/package.json
+++ b/reactdemo/package.json
@@ -21,6 +21,7 @@
     "antd": "^3.5.4",
     "axios": "^0.16.2",
     "compression": "^1.6.2",
+    "core-js": "^2.5.7",
     "express": "^4.14.0",
     "fastclick": "^1.0.6",
     "normalize.css": "^7.0.0",
